# ddd

./: .gitignore  Cargo.toml  README.md
ddd/: Cargo.toml
ddd-application/: Cargo.toml  README.md
ddd-application/examples/: inmemory_command_bus.rs  inmemory_query_bus.rs
ddd-application/src/: command.rs  command_bus.rs  command_handler.rs  context.rs  dto.rs  error.rs  in_process_command_bus.rs  in_process_query_bus.rs  inmemory_command_bus.rs  inmemory_query_bus.rs  lib.rs  query.rs  query_bus.rs  query_handler.rs
ddd-domain/: Cargo.toml  README.md
ddd-domain/examples/: account_aggregate.rs  event_repository.rs  event_upcasting.rs  eventing_inmemory.rs  snapshot_repository.rs  version_usage.rs
ddd-domain/src/: aggregate.rs  aggregate_root.rs  domain_event.rs  domain_service.rs  entiry.rs  entity.rs  error.rs  event_upcaster.rs  lib.rs  specification.rs  value_object.rs
ddd-domain/src/domain_event/: aggregate_events.rs  business_context.rs  domain_event_trait.rs  event_context.rs  event_envelope.rs  field_changed.rs  metadata.rs  mod.rs
ddd-domain/src/eventing/: bus.rs  bus_inmemory.rs  deliverer.rs  engine.rs  handler.rs  mod.rs  reclaimer.rs
ddd-domain/src/persist/: aggregate_repository.rs  event_repository.rs  mod.rs  serialized_event.rs  serialized_snapshot.rs  snapshot_repository.rs
ddd-domain/tests/: aggregate_flow.rs  e2e_upcasting.rs  event_engine_workflow.rs  snapshot_optimization.rs
ddd-macros/: Cargo.toml  README.md
ddd-macros/src/: derive_utils.rs  domain_event.rs  entity.rs  entity_id.rs  event.rs  field_utils.rs  lib.rs  utils.rs  value_object.rs
ddd-macros/tests/ui/: aggregate_basic.rs  entity_id_basic.rs  event_all_variants.rs  event_basic.rs  event_default.rs  value_object_basic.rs
ddd/examples/: account_aggregate.rs  event_repository.rs  event_upcasting.rs  eventing_inmemory.rs  snapshot_repository.rs
ddd/src/: aggregate.rs  aggregate_repository.rs  aggregate_root.rs  domain_event.rs  domain_service.rs  entiry.rs  error.rs  event.rs  event_repository.rs  event_upcaster.rs  lib.rs  repository.rs  snapshot_repository.rs  specification.rs  upcast.rs
ddd/src/eventing/: bus.rs  deliverer.rs  engine.rs  handler.rs  reclaimer.rs
ddd/src/persist/: aggregate_repository.rs  event_repository.rs  mod.rs  serialized_event.rs  serialized_snapshot.rs  snapshot_repository.rs
ddd/tests/: aggregate_flow.rs  e2e_upcasting.rs  event_engine_workflow.rs  snapshot_optimization.rs
demo/: Cargo.toml
demo/src/: main.rs
