[workspace]
members = ["ddd-application", "ddd-domain", "ddd-macros"]
resolver = "2"

[workspace.dependencies]

[profile.dev]
opt-level = 1
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3
