[package]
name = "ddd-application"
version = "0.1.0"
edition = "2024"

[dependencies]
ddd-domain = { path = "../ddd-domain" }

async-trait = { version = "0.1" }
thiserror = { version = "2.0" }
dashmap = { version = "6.1" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
