[package]
name = "ddd-application"
version = "0.1.0"
edition = "2024"

[dependencies]

async-trait = { version = "0.1" }
dashmap = { version = "6.1" }
ddd-domain = { path = "../ddd-domain" }
thiserror = { version = "2.0" }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
