[package]
name = "ddd-domain"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
# 默认开启 eventing，以保持向后兼容；
# 纯领域建模场景可使用 `--no-default-features` 或仅启用所需特性。
default = ["eventing"]
# 事件子系统（依赖 tokio/futures 等）
eventing = [
    "dep:tokio",
    "dep:tokio-util",
    "dep:tokio-stream",
    "dep:futures-core",
    "dep:futures-util",
]
# 基础设施侧对 sqlx 的转换（领域层保持可选）
infra-sqlx = ["dep:sqlx"]

[dependencies]
anyhow = { version = "1.0" }
async-trait = { version = "0.1" }
bon = { version = "3.7" }
chrono = { version = "0.4", features = ["serde"] }
futures-core = { version = "0.3", features = ["alloc"], optional = true }
futures-util = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sqlx = { version = "0.8", features = [
  "postgres",
  "runtime-tokio",
  "uuid",
  "chrono",
], default-features = true, optional = true }
thiserror = { version = "2.0" }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time", "sync"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
tokio-util = { version = "0.7", optional = true }
uuid = { version = "1.11", features = ["serde"] }

[dev-dependencies]
anyhow = { version = "1.0" }
ddd-macros = { path = "../ddd-macros" }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time", "sync"] }
ulid = { version = "1.2", features = ["serde"] }

[[example]]
name = "event_upcasting"
path = "examples/event_upcasting.rs"
required-features = ["eventing"]

[[example]]
name = "account_aggregate"
path = "examples/account_aggregate.rs"
required-features = ["eventing"]

[[example]]
name = "event_repository"
path = "examples/event_repository.rs"
required-features = ["eventing"]

[[example]]
name = "snapshot_repository"
path = "examples/snapshot_repository.rs"
required-features = ["eventing"]

[[example]]
name = "eventing_inmemory"
path = "examples/eventing_inmemory.rs"
required-features = ["eventing"]
