[package]
name = "ddd-macros"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
trybuild = "1.0"
ddd-domain = { path = "../ddd-domain" }
serde = { version = "1", features = ["derive"] }
