[package]
name = "ddd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0" }
async-trait = { version = "0.1" }
bon = { version = "3.7" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[dev-dependencies]
ddd-macros = { path = "../ddd-macros" }
tokio = { version = "1", features = ["macros", "rt"] }
ulid = { version = "1.2" }

[[example]]
name = "event_upcasting"
path = "examples/event_upcasting.rs"

[[example]]
name = "account_aggregate"
path = "examples/account_aggregate.rs"
