[package]
name = "ddd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0" }
async-trait = { version = "0.1" }
bon = { version = "3.7" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
futures-core = { version = "0.3", features = ["alloc"] }
futures-util = { version = "0.3" }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7" }

[dev-dependencies]
ddd-macros = { path = "../ddd-macros" }
ulid = { version = "1.2" }

[[example]]
name = "event_upcasting"
path = "examples/event_upcasting.rs"

[[example]]
name = "account_aggregate"
path = "examples/account_aggregate.rs"

[[example]]
name = "event_repository"
path = "examples/event_repository.rs"

[[example]]
name = "snapshot_repository"
path = "examples/snapshot_repository.rs"
