[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[dependencies]
ddd = { path = "../ddd" }
ddd-macros = { path = "../ddd-macros" }
chrono = { version = "0.4" }
tokio = { version = "1", features = ["macros", "rt"] }
thiserror = { version = "1" }
async-trait = { version = "0.1" }
ulid = { version = "1.2" }
